<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_set"
        android:icon="@mipmap/settings"
        android:title="@string/menu_set_label"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_openList1"
        android:icon="@mipmap/settings"
        android:title="@string/menu_set_openList"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_openMyList1"
        android:icon="@mipmap/settings"
        android:title="@string/myList1"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_openMyList2"
        android:icon="@mipmap/settings"
        android:title="@string/myList2"
        app:showAsAction="never" />
</menu>